--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "ini": "^1.3.7",
     "is-cidr": "^4.0.2",
     "lodash": "^4.17.21",
     "lowdb": "^1.0.0",
     "morgan": "~1.9.1",
+    "multer": "^1.4.2",
     "netmask": "^2.0.2"
   },
   "devDependencies": {
