--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "devstart": "DEBUG=wireguard-webui:* nodemon --ignore 'db.json' ./bin/www"
   },
   "dependencies": {
+    "archiver": "^5.3.0",
     "bcrypt": "^5.0.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
